k8s/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tictactoe-backend
spec:
  selector:
    app: tictactoe-backend
  ports:
  - port: 80
    targetPort: 8081
    name: http
